http-echo/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
  namespace: http-echo
  labels:
    app: bar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar
          image: wqd180067/http-echo:0.1.23-1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          args: ["-listen=:80", "-text='bar'"]
