http-echo/foo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deployment
  namespace: http-echo
  labels:
    app: foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo
          image: wqd180067/http-echo:0.1.21-1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          args: ["-listen=:80", "-text='foo'"]
