http-echo/bar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: http-echo
spec:
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
