http-echo/foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: http-echo
spec:
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
